Adding classes and dates

--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -9,13 +9,53 @@
             android:icon="@android:drawable/ic_dialog_dialer"
             android:title="@string/all_rooms" />
         <item
-            android:id="@+id/nav_morning"
+            android:id="@+id/nav_n1_am"
             android:icon="@android:drawable/ic_menu_compass"
-            android:title="@string/morning_rooms" />
+            android:title="@string/n1_am" />
         <item
-            android:id="@+id/nav_night"
+            android:id="@+id/nav_n1_pm"
             android:icon="@android:drawable/btn_star_big_off"
-            android:title="@string/night_rooms" />
+            android:title="@string/n1_pm" />
+        <item
+            android:id="@+id/nav_n2_am"
+            android:icon="@android:drawable/ic_menu_compass"
+            android:title="@string/n2_am" />
+        <item
+            android:id="@+id/nav_n2_pm"
+            android:icon="@android:drawable/btn_star_big_off"
+            android:title="@string/n2_pm" />
+        <item
+            android:id="@+id/nav_n3_am"
+            android:icon="@android:drawable/ic_menu_compass"
+            android:title="@string/n3_am" />
+        <item
+            android:id="@+id/nav_n3_pm"
+            android:icon="@android:drawable/btn_star_big_off"
+            android:title="@string/n3_pm" />
+        <item
+            android:id="@+id/nav_n4_am"
+            android:icon="@android:drawable/ic_menu_compass"
+            android:title="@string/n4_am" />
+        <item
+            android:id="@+id/nav_n4_pm"
+            android:icon="@android:drawable/btn_star_big_off"
+            android:title="@string/n4_pm" />
+        <item
+            android:id="@+id/nav_n5_am"
+            android:icon="@android:drawable/ic_menu_compass"
+            android:title="@string/n5_am" />
+        <item
+            android:id="@+id/nav_n5_pm"
+            android:icon="@android:drawable/btn_star_big_off"
+            android:title="@string/n5_pm" />
+        <item
+            android:id="@+id/nav_n6_am"
+            android:icon="@android:drawable/ic_menu_compass"
+            android:title="@string/n6_am" />
+        <item
+            android:id="@+id/nav_n6_pm"
+            android:icon="@android:drawable/btn_star_big_off"
+            android:title="@string/n6_pm" />
         <item
             android:id="@+id/nav_dates"
             android:icon="@android:drawable/ic_menu_agenda"
