--- a/app/src/main/res/layout/activity_babies.xml
+++ b/app/src/main/res/layout/activity_babies.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
     tools:openDrawer="start"
-    tools:context="com.fount.seed.BabiesActivity">
+    tools:context="com.fount.seed.RoomActivity">
 
     <include
         layout="@layout/app_bar_main"
