--- a/app/src/main/res/layout/listitem_date.xml
+++ b/app/src/main/res/layout/listitem_date.xml
@@ -20,7 +20,9 @@
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:layout_centerVertical="true"
-            tools:text="Gustavo Temple" />
+            android:layout_toLeftOf="@+id/arrow_picture"
+            android:layout_toStartOf="@+id/arrow_picture"
+            tools:text="18/08/2018" />
 
         <ImageView
             android:id="@+id/arrow_picture"
