--- a/app/src/main/res/layout/listitem_kid.xml
+++ b/app/src/main/res/layout/listitem_kid.xml
@@ -7,8 +7,7 @@
     android:layout_height="wrap_content"
     android:layout_marginLeft="8dp"
     android:layout_marginRight="8dp"
-    android:layout_marginTop="8dp"
-    android:visibility="gone">
+    android:layout_marginTop="8dp">
 
     <RelativeLayout
         android:layout_width="match_parent"
