--- a/app/src/main/res/layout/activity_chalet.xml
+++ b/app/src/main/res/layout/activity_chalet.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
     tools:openDrawer="start"
-    tools:context="com.fount.seed.ChaletActivity">
+    tools:context="com.fount.seed.kids.ChaletActivity">
 
     <include
         layout="@layout/app_bar_kids"
