Adding vector icons

--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -11,6 +11,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="30dp"
+        android:drawableStart="@drawable/ic_library"
         android:text="@string/ebi_ci"
         app:layout_constraintBottom_toTopOf="@id/buttonBabies"
         app:layout_constraintLeft_toLeftOf="@id/buttonBabies"
@@ -20,6 +21,7 @@
         android:id="@+id/buttonBabies"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:drawableStart="@drawable/ic_child"
         android:text="@string/babies"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -31,6 +33,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
+        android:drawableStart="@drawable/ic_work"
         android:text="@string/management"
         app:layout_constraintLeft_toLeftOf="@id/buttonBabies"
         app:layout_constraintRight_toRightOf="@id/buttonBabies"
