--- a/app/src/main/res/layout/app_bar_kids.xml
+++ b/app/src/main/res/layout/app_bar_kids.xml
@@ -54,6 +54,6 @@
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
         android:visibility="visible"
-        app:srcCompat="@android:drawable/ic_menu_myplaces" />
+        android:src="@drawable/ic_person_add" />
 
 </android.support.design.widget.CoordinatorLayout>
